part1/107/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-107-svc
spec:
  type: ClusterIP
  selector:
    app: 107-log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8005
